# lounger

./: .gitignore  CHANGES.md  README.md  pyproject.toml  test_api.py  test_api3.py
config/: config.yaml
datas/demo/: test_case.yaml
datas/sample/: test_case.yaml
docs/: platform.md
images/: framework.drawio
lounger/: __init__.py  analyze_cases.py  case.py  cli.py  config.py  plugin.py  po.py  web_runner.py  yaml_cases.py
lounger/centrifuge/: centrifuge_client_factory.py  centrifuge_manager.py
lounger/commons/: __init__.py  all_request.py  assert_result.py  case.py  extract.py  get_case.py  load_config.py  model.py  project_run_config.py  request.py  run_config.py  template.py  template_engine.py  template_replace.py  var_extract.py
lounger/db_operation/: __init__.py  base_db.py  fabric_tunnel.py  mssql_db.py  mysql_db.py  postgres_db.py  sqlite_db.py
lounger/libs/: jsonpath.py  tomorrow.py
lounger/project_temp/: conftest.py  test_web.py
lounger/pytest_extend/: __init__.py  params.py  screenshot.py
lounger/request/: __init__.py  request_client.py  request_utils.py
lounger/testcases/: test_api.py
lounger/utils/: __init__.py  cache.py  collect.py  config_utils.py  fake_user_generator.py  file_handle.py  file_read.py  get_configs.py  get_project_name.py  hot_loads.py  resource_loader.py  (+2 more)
myapi/: README.md  conftest.py  platform_running.py  pytest.ini  test_api.py
myweb/: README.md
myyapi/: README.md  conftest.py  pytest.ini  test_api.py
tests/: .env  README.md  conftest.py  pytest.ini  test_ai_web.py  test_config_var.py  test_db_tunnel.py
(+44 files in other folders)
