[project]
name = "lounger"
version = "0.2.0"
description = "Next generation automated testing framework."
authors = [
  { name = "bugmaster", email = "defnngj@gmail.com" }
]
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "pytest-playwright>=0.5.1",
    "pytest-req>=0.3.0",
    "pyyaml>=6.0.2",
    "openpyxl>=3.1.5",
    "pymysql>=1.1.1",
    "pytest-rerunfailures>=14.0",
    "pytest-html>=4.1.1",
    "click>=8.1.7",
    "python-dateutil==2.8.2"
]

[project.scripts]
lounger = "lounger.cli:main"

[project.entry-points."pytest11"]
lounger = "lounger.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
